# ms-runloop

./: .gitignore  CMakeLists.txt  INSTRUCTIONS.md  LICENSE  PROGRESS.md  README.md  Requirements.md  WalkthroughRunLoop.md  build.py
.github/workflows/: ci.yml
example/: CMakeLists.txt  README.md  basic_usage.cpp  event_notifier.cpp
inc/: RunLoop.h
include/rpc/: Client.h  EventDispatcher.h  FrameCodec.h  Platform.h  RingBuffer.h  RunLoop.h  Service.h  Types.h
src/: Client.cpp  EventDispatcher.cpp  FrameCodec.cpp  Platform.cpp  RingBuffer.cpp  RunLoop.cpp  Service.cpp
test/: CMakeLists.txt  README.md  RunLoopTest.cpp
tests/: EventDispatcherTest.cpp  RingBufferTest.cpp  RunLoopTest.cpp  ServiceClientTest.cpp
